:icons: font

////
* Write changelog entries in present tense
* Include GitHub issue or PR if possible using link:http://...[#123] format
* Review your changelog entries
* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[v0.23.0]]
== 0.23.0 (TBD)

CAUTION: The breadcrumb of the REST node response and the breadcrumb of the node type in GraphQL has changed. The first element is now the root node of the project followed by its descendants including the currently queried node. Previously the order was reversed. Additionally the root node and the current were missing. link:https://github.com/gentics/mesh/issues/398[#398]

CAUTION: The concept of releases has been renamed into branches. The database structure will automatically be updated.

* The following query parameters have been changed: `release` -> `branch`,  `updateAssignedReleases` -> `updateAssignedBranches`, * `updateReleaseNames` -> `updateBranchNames`
* The `releases` endpoint was renamed to `branches`.
* The `mesh.release.created`, `mesh.release.updated`, `mesh.release.deleted` events have been changed to `mesh.branch.created`, `mesh.branch.updated`, `mesh.branch.deleted`.
* The Java REST Models have been renamed. (e.g.: ReleaseCreateRequest -> BranchCreateRequest)
* I18n messages have been changed accordingly.
* The GraphQL field `release` has been renamed to `branch`. The type name was also updated.

icon:plus[] Elasticsearch: The base64 encoded binary document data will no longer be stored in the search index.

icon:plus[] Elasticsearch: The `/search/status` endpoint now has a new field `available`, which shows if Elasticsearch is currently ready to process search queries.

icon:plus[] GraphQl: It is now possible to filter schemas by their container flag.

icon:check[] GraphQl: Fixed a bug that caused an error when multiple queries where executed concurrently.
