@@ -11,6 +11,11 @@ public interface GenericParameters extends ParameterProvider {
 	public static final String FIELDS_PARAM_KEY = "fields";
 
 	/**
+	 * Query parameter key: {@value #ETAG_PARAM_KEY}
+	 */
+	public static final String ETAG_PARAM_KEY = "etag";
+
+	/**
 	 * Return the fields which should be included in the response.
 	 * 
 	 * @return
@@ -35,4 +40,26 @@ public interface GenericParameters extends ParameterProvider {
 		return this;
 	}
 
+	/**
+	 * Return whether the etag should be omitted or included.
+	 * 
+	 * @return
+	 */
+	default boolean getETag() {
+		String value = getParameter(ETAG_PARAM_KEY);
+		if (value != null) {
+			return Boolean.valueOf(value);
+		} else {
+			return true;
+		}
+	}
+
+	/**
+	 * Set the etag inclusion flag.
+	 * 
+	 * @param includeEtag
+	 */
+	default void setETag(boolean includeEtag) {
+		setParameter(ETAG_PARAM_KEY, String.valueOf(includeEtag));
+	}
 }
