@@ -13,6 +13,7 @@
 [[v0.23.0]]
 == 0.23.0 (TBD)
 
+
 CAUTION: The breadcrumb of the REST node response and the breadcrumb of the node type in GraphQL has changed. The first element is now the root node of the project followed by its descendants including the currently queried node. Previously the order was reversed. Additionally the root node and the current were missing. link:https://github.com/gentics/mesh/issues/398[#398]
 
 CAUTION: The concept of releases has been renamed into branches. The database structure will automatically be updated.
@@ -26,11 +27,13 @@ CAUTION: The concept of releases has been renamed into branches. The database st
 
 icon:plus[] Elasticsearch: The base64 encoded binary document data will no longer be stored in the search index.
 
+icon:plus[] REST: Added `?etag` query parameter which can be used to omit the etag value generation in order to increase performance when etags are not needed.
+
 icon:plus[] Elasticsearch: The `/search/status` endpoint now has a new field `available`, which shows if Elasticsearch is currently ready to process search queries.
 
-icon:plus[] GraphQl: It is now possible to filter schemas by their container flag.
+icon:plus[] GraphQL: It is now possible to filter schemas by their container flag.
 
-icon:check[] GraphQl: Fixed a bug that caused an error when multiple queries where executed concurrently.
+icon:check[] GraphQL: Fixed a bug that caused an error when multiple queries where executed concurrently.
 
 icon:check[] Core: Increased performance for webroot endpoint.
 
